[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Sufyan <bucks.pri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.86.0"
streamlit = "^1.40.2"
crewai-tools = "^0.17.0"
langchain-google-genai = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
